# tracking_balances

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pylint.yml
optima_tg_stock/: run.py
optima_tg_stock/config/: load_json.py  settings.py
optima_tg_stock/data/: example.json
optima_tg_stock/modules/: ContentManager.py  DataModule.py  HTTPClient.py  WebContentLoader.py  WebContentParser.py  bot.py  content_processing.py  custom_logging.py  load_json.py
optima_tg_stock/modules/log/: logging_config.json
tests/: test_bot.py
