[tool.poetry]
name = "optima-tg-stock"
version = "0.1.0"
description = ""
authors = ["rosoporto <rosoporto@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.2"
requests = "^2.32.3"
lxml = "^5.2.2"
python-dotenv = "^1.0.1"
python-telegram-bot = "13.15"
schedule = "^1.2.2"
flake8 = "^7.1.1"
urllib3 = "<2.0,>=1.26"

[tool.poetry.scripts]
load = "optima_tg_stock.run:main"
parser = "optima_tg_stock.modules.WebContentParser:main"
get-data = "optima_tg_stock.modules.DataModule:main"
load-content = "optima_tg_stock.modules.ContentManager:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
